force-app/main/default/objects/SDO_Service_GPT_Simulated_Replies__c/SDO_Service_GPT_Simulated_Replies__c.object-meta.xml
<CustomObject>
    <label>Service Einstein Recommended Replies</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Service Einstein Recommended Replies Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Einstein Recommended Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>