force-app/main/default/objects/SDO_Service_GPT_Simulated_Replies__c/fields/End_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>End_Messaging_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Messaging Session</label>
    <type>Checkbox</type>
</CustomField>