force-app/main/default/objects/SDO_Service_GPT_Simulated_Replies__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keyword__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Message__c</columns>
    <columns>Einstein_GPT_Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>